# BusMind

./: .env.example  .gitignore  README.md  interface_test_and_rectification_report_2026-07-11.md  pyproject.toml  分工2.0.md  命名规范.md  寻路算法与推荐路线修改说明.md  目录说明.md  项目计划书.md
.codex_tmp_ppt_extract/unzipped/: [Content_Types].xml
.postman/: resources.yaml
algorithm/: README.md  目录.txt
algorithm/crowd_prediction/: 目录.txt
algorithm/data_processing/: build_recommendation_feature_dataset.py  build_recommendation_pseudo_labels.py  recommendation_data_utils.py  train_recommend_ranker.py  目录.txt
algorithm/dataset/: README.md  __init__.py  build_features.py  build_labels.py  features_summary.md  recommendation_data.py  summarize_features.py
algorithm/eta/: 目录.txt
algorithm/model/: README.md  __init__.py  base.py  contracts.py  predictor.py  preprocessing.py  register.py  scorer.py  train_ranker.py
algorithm/model_files/: 目录.txt
algorithm/notebooks/: 目录.txt
algorithm/recommend/: __init__.py  contracts.py  models.py  predictor.py  reason_builder.py  scoring.py  selector.py  目录.txt  (+1 more)
backend/: .env.example  README.md  debug_history.py  priority-integration-result.md  requirements.txt  start.py  test_db_query.py  test_history.py  test_history_detailed.py  test_http_status.py  目录.txt
data/: 数据搜集说明.md  目录.txt
database/: 目录.txt
deployment/: 目录.txt
docs/: 目录.txt
frontend/: design-qa.md  index.html  package-lock.json  package.json  smooth-traffic-heatmap.patch  vite.config.js  目录.txt
llm/: 目录.txt
postman/: README.md
scripts/: 目录.txt
simulator/: 目录.txt
tests/: 目录.txt
tools/: validate_processed_data.py  目录.txt
(+683 files in other folders)
