[project]
name = "busmind"
version = "0.1.0"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn==0.29.0",
    "sqlalchemy>=2.0.30",
    "pydantic-settings>=2.10.1,<3.0",
    "passlib[bcrypt]==1.7.4",
    "python-jose[cryptography]==3.3.0",
    "python-multipart==0.0.9",
    "pymysql>=1.1.0",
    "httpx>=0.27,<1.0",
    "python-dotenv>=1.0,<2.0",
    "redis>=5.0,<6.0",
    "pip>=26.1.2",
    "myapplication>=0.1.0",
]

[project.optional-dependencies]
algorithm = [
    "numpy>=1.24,<3.0",
    "pandas>=2.0,<3.0",
    "xgboost>=3.2.0",
]

tabpfn = [
    "tabpfn>=8.1,<9.0",
]

dev = [
    "pytest>=8,<10",
    "pytest-asyncio>=0.23.0",
]

[tool.uv]
package = false

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
default = true
